--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
   get: ^4.6.6
 
 dev_dependencies:
