--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   animated_text_kit: ^4.2.2
+  awesome_icons: ^1.1.0
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
@@ -24,3 +25,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+  fonts:
+    - family: GT Sectra Fine
+      fonts:
+        - asset: assets/fonts/GT Sectra Fine Regular.ttf
