--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.2
   awesome_icons: ^1.1.0
+  dartx: ^1.2.0
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
