--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   awesome_icons: ^1.1.0
   dartx: ^1.2.0
   dartz: ^0.10.1
+  dio: ^5.7.0
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
