--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: ^5.7.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   font_awesome_flutter: ^10.7.0
   go_router: ^14.2.8
   google_fonts: ^6.2.1
