--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.2
   awesome_icons: ^1.1.0
+  bloc: ^8.1.4
   dartx: ^1.2.0
   dartz: ^0.10.1
   dio: ^5.7.0
@@ -16,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   font_awesome_flutter: ^10.7.0
+  get_it: ^8.0.0
   go_router: ^14.2.8
   google_fonts: ^6.2.1
 
