--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   awesome_icons: ^1.1.0
   bloc: ^8.1.4
+  cached_network_image: ^3.4.1
   dartx: ^1.2.0
   dartz: ^0.10.1
   dio: ^5.7.0
